app/assets/stylesheets/base.css.scss
$green: #18bc9c;

html {
  height: 100%;
}

body {
  font-size: 1.1rem;
}

@media (min-width: 769px) {
  body {
    font-size: 1.2rem;
  }
}

h1 {
  font-size: 2em;
}

h2 {
  font-size: 1.7em;
}

h3 {
  font-size: 1.4em;
}

body {
  overflow-x: hidden;
}

a,
a:hover,
a:focus,
a:active,
a.active {
  outline: 0;
  color: $green;
}

.navbar {
  background: #2c3e50;
  font-family: Arial, sans-serif;
}

.navbar .navbar-header {
  width: 100%;
  padding: 5px 0;
}

.navbar .navbar-header a {
  color: white;
  text-decoration: none !important;

  &:hover {
    color: $green;
    text-decoration: underline !important;
  }
}

.navbar a:focus {
  outline: 0;
}

.navbar .navbar-nav {
  letter-spacing: 1px;
}

.navbar .navbar-nav li a:focus {
  outline: 0;
}

.navbar-default {
  border: 0;
}

.odd {
  background-color: #FBF3E9;
}

.gray {
  color: #767676;
}

nav .title {
  margin: 0;
  color: white;
  font-size: 1em;
  line-height: 1em;
  padding: 0.5em 0;
}

nav .title a {
  text-decoration: none;
  color: #27B33C;
}

nav .title a:hover {
  text-decoration: underline;
}

nav i {
  font-size: 1.2rem;
  line-height: 1.2rem !important;
  color: white !important;
  padding: 0.4rem 0 0;
  vertical-align: middle;
}

.left {
  float: left;
}

.right {
  float: right;
}

.hidden {
  display: none;
}

.green {
  color: $green;
}

.border-green {
  border-color: $green;
}

.page-title {
  margin-top: 30px;
  color: #424242;
}

.page-title a {
  color: #424242;
}

.page-subtitle {
  @extend .gray;
  font-size: 1.1em;
}

.center {
  text-align: center;
}

.turbolinks-progress-bar {
  height: 5px;
  background-color: #007bff;
}

hr.section-divider {
  border: 0;
  display: block;
  overflow: visible;
  color: black;
  font-weight: bold;
  font-size: 1.3em;
  letter-spacing: 1em;
  height: 1em;
  width: 3em;
  line-height: 0.5em;
  margin-top: 1em;
  margin-bottom: 1em;

  &::before {
    content: '...';
    vertical-align: top;
  }
}

.toggle {
  padding-top: 10px;

  i {
    margin-left: 5px;
  }
}

.modal .close {
  font-size: 1.5em;
}

@media (max-width: 576px) {
  .modal-dialog {
    margin: 0;
  }

  .modal-dialog  .modal-content {
    border: 0;
    border-radius: 0;
  }
}

.required abbr {
  text-decoration: none;
  cursor: default;
}

textarea {
  min-height: 150px;
}

